--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Data Absensi Siswa</title>
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+</head>
+
+<body class="m-3">
+  <h1>Absesi_Siswa</h1>
+
+  <table class="table" id="Absesi_Siswa">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">tanggal</th>
+        <th scope="col">nis</th>
+        <th scope="col">nama</th>
+        <th scope="col">alamat</th>
+        <th scope="col">notlpn</th>
+        <th scope="col">kelas</th>
+        <th scope="col">keterangan</th>
+        
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+
+  
+  
+  
+  
+  
 </head>
 
 <body>
