--- a/index.html
+++ b/index.html
@@ -34,14 +34,93 @@
   </table>
 
   
-  
-  
-  
-  
-</head>
 
-<body>
+  <div class="d-flex justify-content-center">
+    <img src="loader.gif" style="width: 15em; display: block" id="loader">
+  </div>
 
+  <div class="d-flex justify-content-center">
+  </div>
+
+  <style>
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+    }
+
+    th,
+    td {
+      padding: 10px;
+      border: 1px solid #ddd;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+
+    tr:hover {
+      background-color: #f5f5f5;
+    }
+
+    .stack-up {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+  </style>
+
+  <script type="module">
+    import { ambilDaftarAbsensi, formatAngka, hapusAbsensi } from './main.js';
+
+    $(document).ready(async function() {
+      let elemenDaftar = $("#daftar-absensi > tbody");
+      let daftarAbsensi = await ambilDaftarAbsensi();
+      let nomor = 1;
+
+
+
+      daftarAbsensi.forEach((data) => {
+        elemenDaftar.append(
+          '<tr>' +
+          '<th>' + nomor + '</th>' +
+          '<td>' + data.tanggal + '</td>' +
+          '<td>' + data.nis + '</td>' +
+          '<td>' + data.nama + '</td>' +
+          '<td>' + data.alamat + '</td>' + '<td>' + data.noTlpn + '</td>' + '<td>' + data.kelas + '</td>' + '<td>' + data.keterangan + '</td>' +
+          '<td class="stack-up">' +
+          ' <a href="#" class="btn btn-warning link-ubah"  data="' +
+          data.id +
+          '">ubah</a> ' +
+          ' <button class="btn btn-danger tombol-hapus" data="' +
+          data.id +
+          '">Hapus</button>' + '</td>' +
+          '</tr>'
+        );
+        nomor = nomor + 1;
+      });
+
+      $('.tombol-hapus').click(async function() {
+        await hapusAbsensi($(this).attr('data'));
+        location.reload();
+      })
+
+      $('.link-ubah').click(async function() {
+        window.location.replace('ubah-produk.html?docId=' + $(this).attr('data'));
+      })
+
+      $('#loader').hide();
+
+    });
+  </script>
+   <footer class="py-3 bg-dark-subtle mt-auto">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Beranda</a></li>
+      <li class="nav-item"><a href="forum-absensi.html" id="link-login-penjual" class="nav-link px-2 text-body-secondary">tambah data</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">&copy; </p>
+  </footer>
 </body>
 
 </html>
