--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     import { ambilDaftarAbsensi, formatAngka, hapusAbsensi } from './main.js';
 
     $(document).ready(async function() {
-      let elemenDaftar = $("#daftar-absensi > tbody");
+      let elemenDaftar = $("#-absensi_siswa > tbody");
       let daftarAbsensi = await ambilDaftarAbsensi();
       let nomor = 1;
 
