--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           '<td>' + data.tanggal + '</td>' +
           '<td>' + data.nis + '</td>' +
           '<td>' + data.nama + '</td>' +
-          '<td>' + data.alamat + '</td>' + '<td>' + data.noTlpn + '</td>' + '<td>' + data.kelas + '</td>' + '<td>' + data.keterangan + '</td>' +
+          '<td>' + data.alamat + '</td>' + '<td>' + data.notlpn + '</td>' + '<td>' + data.kelas + '</td>' + '<td>' + data.keterangan + '</td>' +
           '<td class="stack-up">' +
           ' <a href="#" class="btn btn-warning link-ubah"  data="' +
           data.id +
