--- a/forum-absensi.html
+++ b/forum-absensi.html
@@ -60,7 +60,7 @@
     let elemenNis = document.getElementById('input-nis');
     let elemenNama = document.getElementById('input-nama');
     let elemenAlamat = document.getElementById('input-alamat');
-    let elemenNoTlpn = document.getElementById('input-noTlpn');
+    let elemenNoTlpn = document.getElementById('input-notlpn');
     let elemenKelas = document.getElementById('input-kelas');
     let elemenKeterangan = document.getElementById('input-keterangan')
 
