--- a/forum-absensi.html
+++ b/forum-absensi.html
@@ -35,7 +35,7 @@
     </div>
     <div class="mb-3">
       <label class="form-label">Notlpn</label>
-      <input type="text" class="form-control" id="input-noTlpn">
+      <input type="text" class="form-control" id="input-notlpn">
     </div>
     <div class="mb-3">
       <label class="form-label">Kelas</label>
