--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -15,25 +15,40 @@
 <body class="m-4">
   <h1>Ubah Data </h1>
 
-  <form class="mb-3">
+<form class="mb-3">
     <div class="mb-3">
-      <label class="form-label">Nama Pembeli</label>
-      <input type="text" class="form-control" id="input-nama">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">alamat</label>
-      <input type="text" class="form-control" id="input-alamat">
-    </div>
-    <div class="mb-3">
-      <label class="form-label">no telpon</label>
-      <input type="text" class="form-control" id="input-notlpn">
-    </div>
-    <button type="submit" class="btn btn-primary" id="tombol-ubah">Ubah</button>
+      <div class="mb-3">
+        <label class="form-label">Tangal</label>
+        <input type="date" class="form-control" id="input-tanggal">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Nis</label>
+        <input type="text" class="form-control" id="input-nis">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Nama</label>
+        <input type="text" class="form-control" id="input-nama">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Alamat</label>
+        <input type="text" class="form-control" id="input-alamat">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">No.tlpn</label>
+        <input type="text" class="form-control" id="input-noTlpn">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Kelas</label>
+        <input type="text" class="form-control" id="input-kelas">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Keterangan</label>
+        <input type="text" class="form-control" id="input-keterangan">
+      </div>
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary" id="tombol-ubah">Ubah</button>
+      </div>
   </form>
-
-<div class="d-flex justify-content-center">
-  <button onclick="location.href='index.html'" style="background-color: blue; color: white; border-radius: 10px;">data absen</button>
-</div>
 
   <script type="module">
     import { ambilPembeli, ubahPembeli } from './main.js';
