menghapus titik ubah-absensi.html

--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -34,7 +34,7 @@
         <input type="text" class="form-control" id="input-alamat">
       </div>
       <div class="mb-3">
-        <label class="form-label">No.tlpn</label>
+        <label class="form-label">Notlpn</label>
         <input type="text" class="form-control" id="input-noTlpn">
       </div>
       <div class="mb-3">
