--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -80,13 +80,15 @@
       await ubahPembeli(docId, elemenNamaPembeli.value, elemenAlamat.value, elemenNoTlpn.value);
       window.location.href = 'index.html';
     });
-     <footer class="py-3 bg-dark-subtle mt-auto">
+    
+     footer class="py-3 bg-dark-subtle mt-auto">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Beranda</a></li>
-      <li class="nav-item"><a href="form-absensi.html" id="link-login-penjual" class="nav-link px-2 text-body-secondary">tambah data</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Tambah absensi</a></li>
     </ul>
-    <p class="text-center text-body-secondary">&copy; </p>
+    <p class="text-center text-body-secondary">&copy; 2024 ABSEN SISWA</p>
+
   </footer>
+  
   </script>
 </body>
 
