--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -81,15 +81,17 @@
       window.location.href = 'index.html';
     });
     
-     footer class="py-3 bg-dark-subtle mt-auto">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Tambah absensi</a></li>
-    </ul>
-    <p class="text-center text-body-secondary">&copy; 2024 ABSEN SISWA</p>
-
-  </footer>
+     
   
   </script>
+  
+  <footer class="py-3 bg-dark-subtle mt-auto">
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Tambah absensi</a></li>
+  </ul>
+  <p class="text-center text-body-secondary">&copy; 2024 ABSEN SISWA</p>
+  
+  </footer>
 </body>
 
 </html>
