--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -87,7 +87,7 @@
   
   <footer class="py-3 bg-dark-subtle mt-auto">
   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Tambah absensi</a></li>
+    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">daftar absensi</a></li>
   </ul>
   <p class="text-center text-body-secondary">&copy; 2024 ABSEN SISWA</p>
   
