mengganti nama fungsi

--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -51,7 +51,7 @@
   </form>
 
   <script type="module">
-    import { ubahabsensi, ambilabsensi } from './main.js';
+    import {ambilAbsensi, ubahAbsensi} from './main.js';
 
     let tombolTambah = document.getElementById('tombol-tambah');
     let elemenTanggal = document.getElementById('input-tanggal');
