--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -71,8 +71,8 @@
     elemenNama.value = absensi.nama;
     elemenAlamat.value = absensi.alamat;
     elemenNoTlpn.value = absensi.notlpn;
-    elemenKelas .value = absensi.kelas;
-    elemenKeterangan = absensi.keterangan;
+    elemenKelas.value = absensi.kelas;
+    elemenKeterangan.value = absensi.keterangan;
 
 
     tombolUbah.addEventListener('click', async function(el) {
