--- a/ubah-absensi.html
+++ b/ubah-absensi.html
@@ -53,7 +53,7 @@
   <script type="module">
     import {ambilAbsensi, ubahAbsensi} from './main.js';
 
-    let tombolTambah = document.getElementById('tombol-tambah');
+    let tombolUbah = document.getElementById('tombol-ubah');
     let elemenTanggal = document.getElementById('input-tanggal');
     let elemenNis = document.getElementById('input-nis');
     let elemenNama = document.getElementById('input-nama');
