--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
 
     $(document).ready(async function() {
       let elemenDaftar = $("#absensi-siswa > tbody");
-      let daftarAbsensi = await ambilDaftarAbsensi();
+      let daftarPelajaran = await ambilDaftarAbsensi();
       let nomor = 1;
 
 
 
-      daftarAbsensi.forEach((data) => {
+      daftarPelajaran.forEach((data) => {
         elemenDaftar.append(
           '<tr>' +
           '<th>' + nomor + '</th>' +
@@ -107,7 +107,7 @@
       })
 
       $('.link-ubah').click(async function() {
-        window.location.replace('ubah-absensi.html?docId=' + $(this).attr('data'));
+        window.location.replace('Absensi-siswa.html?docId=' + $(this).attr('data'));
       })
 
       $('#loader').hide();
